# ShellMe

./: README.md
cprojs/: CMakeLists.txt  demo.c  demo.h  leecode.c  leecode.h  main.c  makefile
cprojs/easylogger/: CMakeLists.txt
cprojs/easylogger/inc/: elog.h
note/: ingookey.tech.md
src/awkproj/: marks.awk  marks.txt  out.awk
src/com/: data_struct.py  mainAdb  mainLinux  mainLinux.md  mainWin  mainWin.md  teAdb  teShell
src/com/parseyaml/: conf.ini  conf.xml  conf.yaml  main.py  test.py
src/com/subShells/: code.shell  processControl  shell.sh
src/com/subWins/: manageMemory.md
src/goproj/: inlet.go
src/quoteshow/: books.bak  junk.bak
tests/: teAdb  teLinux  teWin  testShell
webs/: main.py
